--- a/Tarea1/Tarea1App/templates/Tarea1App/ciudades.html
+++ b/Tarea1/Tarea1App/templates/Tarea1App/ciudades.html
@@ -9,44 +9,41 @@
     <div class="container">
       <div class="intro">
         <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="{% static 'Tarea1App/img/principal.jpg' %}" alt="">
-        <div class="intro-text left-0 text-center bg-faded p-5 rounded">
-          <h2 class="section-heading mb-4" >
-            <span class="section-heading-lower">Lista de ciudades</span>
-          </h2>
-        </div>
         <div class="intro-text left-0 bg-faded p-5 rounded">
-          <p>
-            <ul>
+          <p class="mb-3">
+          <h1> Lista de ciudades </h1> <br>
+            {% if ciudades %}
+              <ul>
                 {% for c in ciudades %}
-                    <li>{{ c.name }}, {{ c.country }}</li>
+                    <li> <a href="{% url 'Ciudad' c.name %}"> {{ c.name }}, {{ c.country }} </a></li>
                 {% endfor %}
-            </ul>
+              </ul>
+              
+              <p> Página {{ pagina }} de {{ maximo_pags }} </p>
+
+              {% if pagina != 1%}
+                {% with anterior=pagina|add:"-1" %}
+                <button> <a href="{% url 'Ciudades' anterior %}"> Anterior </a></button>
+                {% endwith %}
+              {% endif %}
+            
+              {% if pagina != maximo_pags %}
+                {% with siguiente=pagina|add:"1" %}
+                <button> <a href="{% url 'Ciudades' siguiente %}"> Siguiente </a></button>
+                {% endwith %}
+              {% endif %}
+
+            {% else %}
+              <p> No hay ciudades que mostrar </p>
+
+            {% endif %}
           </p>
+
+          
          
         </div>
       </div>
     </div>
   </section>
-
-
-  
-    <!-- Message -->
-    <!-- 
-    <section class="page-section cta">
-      <div class="container">
-        <div class="row">
-          <div class="col-xl-9 mx-auto">
-            <div class="cta-inner text-center rounded">
-              <h2 class="section-heading mb-4">
-                <span class="section-heading-upper">Compromiso total</span>
-                <span class="section-heading-lower">Garantizado</span>
-              </h2>
-              <p class="mb-0">Con más de 75 años de experiencia a nuestras espaldas, desde Gestión de Pedidos tenemos los conocimientos y herramientas necesarios para llevar cualquier objeto a la puerta de su casa con puntualidad y profesionalidad.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    -->
 
 {% endblock %}
