--- a/Tarea1/Tarea1App/templates/Tarea1App/usuarios.html
+++ b/Tarea1/Tarea1App/templates/Tarea1App/usuarios.html
@@ -4,49 +4,47 @@
 
 {% block content %}
 
+
    <!-- Heading -->
    <section class="page-section clearfix">
     <div class="container">
       <div class="intro">
         <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="{% static 'Tarea1App/img/principal.jpg' %}" alt="">
-        <div class="intro-text left-0 text-center bg-faded p-5 rounded">
-          <h2 class="section-heading mb-4" >
-            <span class="section-heading-lower">Lista de usuarios</span>
-          </h2>
-        </div>
         <div class="intro-text left-0 bg-faded p-5 rounded">
           <p class="mb-3">
-            <ul>
+          <h1> Lista de usuarios </h1><br>
+            {% if usuarios %}
+              <ul>
                 {% for u in usuarios %}
-                    <li>{{ u.name }} {{ u.lastName }}</li>
+                    <li> <a href="{% url 'Usuario' u.id %}">{{ u.name }} {{ u.lastName }} </a></li>
                 {% endfor %}
-            </ul>
+              </ul>
+
+              <p> Página {{ pagina }} de {{ maximo_pags }} </p>
+
+              {% if pagina != 1%}
+                {% with anterior=pagina|add:"-1" %}
+                <button> <a href="{% url 'Usuarios' anterior %}"> Anterior </a></button>
+                {% endwith %}
+              {% endif %}
+            
+              {% if pagina != maximo_pags %}
+                {% with siguiente=pagina|add:"1" %}
+                <button> <a href="{% url 'Usuarios' siguiente %}"> Siguiente </a></button>
+                {% endwith %}
+              {% endif %}
+
+            {% else %}
+              <p> No hay usuarios que mostrar </p>
+
+            {% endif %}
           </p>
-         
+
+          
+
         </div>
       </div>
     </div>
   </section>
-
-
-  
-    <!-- Message -->
-    <!-- 
-    <section class="page-section cta">
-      <div class="container">
-        <div class="row">
-          <div class="col-xl-9 mx-auto">
-            <div class="cta-inner text-center rounded">
-              <h2 class="section-heading mb-4">
-                <span class="section-heading-upper">Compromiso total</span>
-                <span class="section-heading-lower">Garantizado</span>
-              </h2>
-              <p class="mb-0">Con más de 75 años de experiencia a nuestras espaldas, desde Gestión de Pedidos tenemos los conocimientos y herramientas necesarios para llevar cualquier objeto a la puerta de su casa con puntualidad y profesionalidad.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    -->
 
 {% endblock %}
